<resources>
    <string name="app_name">ThreeFragmentsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_meats_quantity">Cantidad de carnes</string>
    <string name="action_continue_text">Continuar</string>
    <string name="action_frutas_text">Frutas</string>
    <string name="action_salad_text">Ensalada</string>
    <string name="action_pure_text">Pure</string>
    <string name="text_resume">Resumen</string>
    <string name="text_meats_quantity_resume">Cantidad de carnes:</string>
    <string name="text_complement_resume">Complemento:</string>
    <string name="error_meats">Debes ingresar una cantidad</string>
    <string name="error_complement">Debes escoger un complemento</string>
    <string name="header_complement">complemento</string>
</resources>