<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.escobar.threefragmentsactivity.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondFragment">

        <TextView
            android:id="@+id/complement_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_gap"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toTopOf="@+id/header_complement"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Complemento"
            android:text="@{viewModel.complement}"/>

        <TextView
            android:id="@+id/header_complement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_gap"
            android:text="@string/header_complement"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintBottom_toTopOf="@+id/action_select_salad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/complement_text_view" />

        <Button
            android:id="@+id/action_select_fruits"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_frutas_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/action_select_salad"
            app:layout_constraintEnd_toStartOf="@+id/action_select_salad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/action_select_salad"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_salad_text"
            app:layout_constraintBottom_toTopOf="@+id/action_continue"
            app:layout_constraintEnd_toStartOf="@+id/action_select_pure"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/action_select_fruits"
            app:layout_constraintTop_toBottomOf="@+id/header_complement" />

        <Button
            android:id="@+id/action_select_pure"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_pure_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/action_select_salad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/action_select_salad" />

        <Button
            android:id="@+id/action_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_gap"
            android:text="@string/action_continue_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_select_salad" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>